# cs2tapping

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keyboard_hook.rs  lib.rs  main.rs  settings.rs  tray.rs
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
